--- a/web/themes/custom/unfussy/templates/layout/page.html.twig
+++ b/web/themes/custom/unfussy/templates/layout/page.html.twig
@@ -62,6 +62,12 @@
 
     <div class="layout-content">
       {{ page.content }}
+
+      {{ include('unfussy:button', {
+  text: 'Click me',
+  url: '/node/1',
+  variant: 'primary'
+}) }}
     </div>{# /.layout-content #}
 
     {% if page.sidebar_first %}
